Add files tab to projects (#399)
* Update FileService

* Fix showMoreTextComponent not rerendering

* Finish files layout; add files removal

* Add file download

* Fix time tracker autofill (again)

* Fix incorrect role in add users dialog

* Fix incorrect date offset in project

* Wrap user list header

* Display contact email when resetting password
