# src/app/api/file-service/models.ts
@@ -1,4 +1,2 @@
-export { FileInfo } from './models/file-info';
 export { FileAccessType } from './models/file-access-type';
 export { OperationResultResponse } from './models/operation-result-response';
-export { OperationResultResponseFiles } from './models/operation-result-response-files';
