# src/app/api/file-service/models/operation-result-response-files.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { FileInfo } from './file-info';
-export interface OperationResultResponseFiles {
-	body?: Array<FileInfo>;
-	errors: Array<string>;
-}
